--- a/foreningens_stadgar.html
+++ b/foreningens_stadgar.html
@@ -123,6 +123,11 @@
             <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">Stadgar BRF Ymer 2</h5>
             <p class="font-normal text-gray-700 dark:text-gray-400">Denna ruta tar dig till PDF:en.</p>
         </a>
+        <a href="ordningsregler_BRFYmer2.pdf" 
+            class="block max-w-sm p-6 bg-white border border-gray-200 rounded-lg shadow-md hover:bg-gray-100 dark:bg-gray-800 dark:border-gray-700 dark:hover:bg-gray-700">
+            <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">Ordningsregler BRF Ymer 2</h5>
+            <p class="font-normal text-gray-700 dark:text-gray-400">Denna ruta tar dig till PDF:en.</p>
+        </a>
     </div>
     
     <style>
