--- a/index.html
+++ b/index.html
@@ -115,7 +115,8 @@
 	</div>
 	<div class="column2">
 		
-	
+		<img srcset="/docs/images/examples/test.jpg 1x, test.jpg 2x" class="rounded-lg mx-auto "
+		alt="image description" style="margin-top: 80px; width: 800px;">
 		
 	</div>
 	<div class="column3">
